# process-gpt-execution

./: .env.example  .gitignore  Dockerfile  Pipfile  README.md  Usage.py  a2a_agent_client.py  agent_chat.py  agent_executor.py  agent_server.py  audio_input.py  audio_output.py  code_executor.py  compensation_handler.py  database.py  dev-ingress.yaml  docker-compose.yml  fcm_client.py  main.py  mcp.json  mcp_config_api.py  mem0_agent_client.py  migration_rpc_function.sql  migration_script.py  min.py  nginx.conf  package-lock.json  process_chat.py  process_db_manager.py  process_def_search.py  process_definition.py  process_engine.py  process_engine_bak.py  process_image.py  process_polling.py  process_var_sql_gen.py  pyproject.toml  requirements.txt  smtp_handler.py  sql.txt  (+1 more)
.github/workflows/: deploy-prod.yaml  deploy.yaml  polling-service-prod.yaml  polling-service.yaml
AgentMonitoring/: .gitignore  README.md  database_schema.sql  deployment.yaml  dockerfile  main.py  pyproject.toml  router.py
AgentMonitoring/outputs/: report_sales_activity_final_report_제안서_최종_승인_20250617_021342.md  report_sales_activity_fixed_report_제안서_보완작성_20250617_020858.md  report_sales_activity_report_제안서_초안_작성_20250617_020335.md  report_sales_activity_report_제안서_초안_작성_20250617_111053.md  slides_sales_activity_final_slide_제안서_최종_승인_20250617_021342.md  slides_sales_activity_fixed_slide_제안서_보완작성_20250617_020858.md  slides_sales_activity_slide_제안서_초안_작성_20250617_020335.md  slides_sales_activity_slide_제안서_초안_작성_20250617_111053.md
AgentMonitoring/src/: __init__.py
AgentMonitoring/src/parallel/: __init__.py  agent_feedback_analyzer.py  agents_repository.py  context_manager.py  crew_config_manager.py  diff_util.py  feedback_poller.py  knowledge_manager.py  safe_tool_loader.py  start_multi_format.py  test_feedback_with_memory.py  todolist_poller.py
AgentMonitoring/src/parallel/crews/: __init__.py
AgentMonitoring/src/parallel/crews/form_crew/: FormCrew.py  __init__.py
AgentMonitoring/src/parallel/crews/form_crew/config/: __init__.py  agents.yaml  tasks.yaml
AgentMonitoring/src/parallel/crews/planning_crew/: AgentMatchingCrew.py  ExecutionPlanningCrew.py  PlanningCrew.py  __init__.py
AgentMonitoring/src/parallel/crews/planning_crew/config/: agents.yaml  tasks.yaml
AgentMonitoring/src/parallel/crews/planning_crew/config_agent_matching/: __init__.py  agents.yaml  tasks.yaml
AgentMonitoring/src/parallel/crews/planning_crew/execution_planning_config/: agents.yaml  tasks.yaml
AgentMonitoring/src/parallel/crews/report_crew/: DynamicReportCrew.py  ReportCrew.py  __init__.py
AgentMonitoring/src/parallel/crews/report_crew/config/: agents.yaml  tasks.yaml
AgentMonitoring/src/parallel/crews/slide_crew/: SlideCrew.py
AgentMonitoring/src/parallel/crews/slide_crew/config/: __init__.py  agents.yaml  tasks.yaml
AgentMonitoring/src/parallel/event_logging/: __init__.py  callback_handler.py  crew_event_logger.py
AgentMonitoring/src/parallel/flows/: __init__.py  dynamic_report_flow.py  multi_format_flow.py
csv/: configuration.csv  form_def.csv  proc_def.csv
fcm_service/: Dockerfile  README.md  database.py  deployment.yaml  fcm_service.py  main.py  pyproject.toml  requirements.txt
features/process_chat/: __init__.py  constants.py  schemas.py
features/process_chat/clients/: __init__.py  anthropic_client.py  base.py  client_factory.py  google_client.py  ollama_client.py  openai_client.py
features/process_chat/factories/: __init__.py
features/process_chat/interfaces/chat_interface/: __init__.py  chat_interface.py
features/process_chat/interfaces/chat_interface/clients/: anthropic_client.py  base.py  client_factory.py  google_client.py  langchain_client.py  ollama_client.py  openai_client.py
features/process_chat/interfaces/chat_interface/factories/: message_factory.py
features/process_chat/utils/: __init__.py  token_util.py
frontend/: package-lock.json
frontend/src/: App.vue
frontend/src/components/: AudioRecorder.vue
polling_service/: .env.example  DOCUMENT_PARSING_GUIDE.md  Dockerfile  README.md  agent_processor.py  block_finder.py  code_executor.py  database.py  deployment.yaml  document_parser.py  file_cleanup_service.py  main.py  mcp_processor.py  polling_service.py  process_definition.py  pyproject.toml  requirements.txt  smtp_handler.py  workitem_processor.py
polling_service/tests/: README.md  conftest.py  exclusiveExclusive.json  exclusiveInclusive.json  exclusiveParallel.json  inclusiveExclusive.json  inclusiveInclusive.json  inclusiveParallel.json  parallelExclusive.json  parallelInclusive.json  parallelParallel.json  testDefinition.py  testSubprocess.json  test_block_finder.py  test_definition.py  test_gateway_combinations.py  test_resolve_next_activities.py  test_workitem_processor_unit.py
static/: audio-stream.js  audio.html  index.html  stream.html
supabase/: config.toml
tests/: README.md  test.json  test_definition.py
