[project]
name = "process-gpt-polling-service"
version = "0.1.0"
description = "Process GPT Polling Service - Handles workitem polling and processing"
readme = "README.md"
requires-python = ">=3.12.3,<3.13"
dependencies = [
    "fastapi==0.115.12",
    "langchain==0.3.25",
    "langchain-anthropic==0.3.15",
    "langchain-community==0.3.25",
    "langchain-core==0.3.65",
    "langchain-mcp-adapters==0.1.0",
    "langchain-ollama==0.3.3",
    "langchain-openai==0.3.23",
    "langgraph==0.5.3",
    "langserve==0.3.1",
    "process-gpt-llm-factory==1.0.0",
    "psutil==6.1.0",
    "psycopg2-binary==2.9.10",
    "pydantic==2.11.7",
    "pytest==8.3.3",
    "pytest-asyncio==0.25.3",
    "python-dotenv==1.1.0",
    "pytz==2025.2",
    "supabase==2.15.3",
    "uvicorn==0.34.3",
]
